--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -4,14 +4,14 @@
 # 
 # Translators:
 # Jan Štourač <wormsik666@gmail.com>, 2014-2015
-# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-07 22:30+0100\n"
-"PO-Revision-Date: 2016-01-07 21:30+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-01-10 09:59+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2999,7 +2999,7 @@ msgstr "Povolit pouze pro zápis"
 msgid ""
 "Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
 "errors and changes of S.M.A.R.T. attributes."
-msgstr ""
+msgstr "Nastaví interval mezi kontrolami disků na N sekund, včetně pořízení záznamu o chybách a změně atributů z vestavěné S.M.A.R.T. diagnostiky jednotek."
 
 msgid "Settings"
 msgstr "Nastavení"
@@ -3511,12 +3511,12 @@ msgstr "Toto pole by mělo obsahovat seznam doménových názvů nebo IP adres"
 msgid ""
 "This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr ""
+msgstr "Tato kolonka by měla obsahovat pouze seznam doménových názvů nebo jejich IP adres, oddělených znaky <,> nebo <;>"
 
 msgid ""
 "This field should be a list of host names or IP addresses separated by <,> "
 "or <;>"
-msgstr ""
+msgstr "Tato kolonka by měla obsahovat pouze názvy strojů nebo jejich IP adresy, oddělené znaky <,> nebo <;>"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3554,14 +3554,14 @@ msgid "This field should only contain numbers"
 msgstr "Toto pole by mělo obsahovat pouze čísla"
 
 msgid "This field should only contain numbers separated by <,> or <;>"
-msgstr ""
+msgstr "Tato kolonka by měla obsahovat číslice, oddělené znaky <,> nebo <;>"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
-msgstr ""
+msgstr "Tato kolonka by měla obsahovat pouze čísla portů (0 - 65535), oddělená znaky <,> nebo <;>"
 
 msgid "This field should only contain strings separated by <,> or <;>"
-msgstr ""
+msgstr "Tato kolonka by měla obsahovat pouze řetězce znaků, oddělených znaky <,> nebo <;>"
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Tato funkce je k něčemu jen v případě, že ji pevný disk umí."
