--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -5,15 +5,15 @@
 # Translators:
 # jmcainzos <jmcainzos@vodafone.es>, 2013
 # jmcainzos <jmcainzos@vodafone.es>, 2012
-# Raul Fernandez Garcia <raulfg3@gmail.com>, 2012-2015
+# Raul Fernandez Garcia <raulfg3@gmail.com>, 2012-2016
 # Volker <votdev@gmx.de>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-07 22:30+0100\n"
-"PO-Revision-Date: 2016-01-07 21:30+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-01-18 21:51+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3001,7 +3001,7 @@ msgstr "Establecer Solo Escritura"
 msgid ""
 "Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
 "errors and changes of S.M.A.R.T. attributes."
-msgstr ""
+msgstr "Establecer el intervalo entre comprobaciones de disco en N segundos. Almacena los errores y los cambios en los atributos S.M.A.R.T"
 
 msgid "Settings"
 msgstr "Configuración"
@@ -3167,7 +3167,7 @@ msgstr "Especifica si está permitido el login como superusuario"
 msgid ""
 "Specifies whether the system performance statistics are collected "
 "periodically."
-msgstr "Especifique donde quiere que las estadísticas se almacenen periodicamente."
+msgstr "Habilita que las estadísticas de rendimiento se almacenen periodicamente."
 
 msgid ""
 "Specifies whether to monitor the system status and select the most "
@@ -3513,12 +3513,12 @@ msgstr "El campo debe ser una lista de dominios o de direcciones IP"
 msgid ""
 "This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr ""
+msgstr "El campo debe ser una lista de dominios o de direcciones IP separados por <,> o <;>"
 
 msgid ""
 "This field should be a list of host names or IP addresses separated by <,> "
 "or <;>"
-msgstr ""
+msgstr "Este campo debe ser una lista de nombres de host o de direcciones IP separados por <,> o <;>"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3556,14 +3556,14 @@ msgid "This field should only contain numbers"
 msgstr "Debe contener solo números"
 
 msgid "This field should only contain numbers separated by <,> or <;>"
-msgstr ""
+msgstr "Este campo debe contener solo números separados por <,> o <;>"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
-msgstr ""
+msgstr "Este campo debe contener solo puertos (0-65535) separados por <,> o <;>"
 
 msgid "This field should only contain strings separated by <,> or <;>"
-msgstr ""
+msgstr "Este campo debe contener solo cadenas separadas por <,> o <;>"
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Esta opción es efectiva solo si la soporta el dispositivo."
