--- a/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Serhat SUT <serhat.sut@gmail.com>, 2012-2015
+# Serhat SUT <serhat.sut@gmail.com>, 2012-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-07 22:30+0100\n"
-"PO-Revision-Date: 2016-01-07 21:30+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-01-07 21:58+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/votdev/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2998,7 +2998,7 @@ msgstr "Sadece yazılabilir ayarla"
 msgid ""
 "Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
 "errors and changes of S.M.A.R.T. attributes."
-msgstr ""
+msgstr "Disk kontrolleri arasındaki zaman aralığını N saniye olarak ayarla, SMART hatalarını ve SMART değerlerindeki değişiklikleri kayıt altına al."
 
 msgid "Settings"
 msgstr "Ayarlar"
@@ -3510,12 +3510,12 @@ msgstr "Bu alan domain adları ya da IP adresleri listesi olmalıdır"
 msgid ""
 "This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr ""
+msgstr "Bu alan <,> ya da <;> ile ayrılmış domain adları ya da IP adresleri listesi olmalıdır"
 
 msgid ""
 "This field should be a list of host names or IP addresses separated by <,> "
 "or <;>"
-msgstr ""
+msgstr "Bu alan <,> ya da <;> ile ayrılmış sistem adları ya da IP adresleri listesi olmalıdır"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3553,14 +3553,14 @@ msgid "This field should only contain numbers"
 msgstr "Bu alan sadece rakam içerebilir"
 
 msgid "This field should only contain numbers separated by <,> or <;>"
-msgstr ""
+msgstr "Bu alan sadece <,> veya <;> ile ayrılmış rakam içerebilir"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
-msgstr ""
+msgstr "Bu alan sadece <,> veya <;> ile ayrılmış port (0 - 65535) numarası içerebilir"
 
 msgid "This field should only contain strings separated by <,> or <;>"
-msgstr ""
+msgstr "Bu alan sadece <,> veya <;> ile ayrılmış değer içerebilir"
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Bu fonksiyon sadece sabit disk destekliyor ise çalışır."
