--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# kochin <kochinc@outlook.com>, 2013-2015
+# kochin <kochinc@outlook.com>, 2013-2016
 # kochin <kochinc@outlook.com>, 2012-2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-07 22:30+0100\n"
-"PO-Revision-Date: 2016-01-07 21:30+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-01-08 20:52+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2999,7 +2999,7 @@ msgstr "設為只准寫入"
 msgid ""
 "Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
 "errors and changes of S.M.A.R.T. attributes."
-msgstr ""
+msgstr "設定磁盤檢查之時間間隔為 N 秒，記錄 S.M.A.R.T. 錯誤和 S.M.A.R.T. 屬性變更於日誌內。"
 
 msgid "Settings"
 msgstr "設定"
@@ -3511,12 +3511,12 @@ msgstr "此欄位應該是一份網域名稱或 IP 地址的列表"
 msgid ""
 "This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr ""
+msgstr "此欄位應該是一份以<,>或<;>分隔之網域名稱或 IP 地址的列表"
 
 msgid ""
 "This field should be a list of host names or IP addresses separated by <,> "
 "or <;>"
-msgstr ""
+msgstr "此欄位應該是一份以<,>或<;>分隔之主機名稱或 IP 地址的列表"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3554,14 +3554,14 @@ msgid "This field should only contain numbers"
 msgstr "此欄位應該只包含數字"
 
 msgid "This field should only contain numbers separated by <,> or <;>"
-msgstr ""
+msgstr "此欄位應該只包含以 <,> 或 <;> 分隔的數字"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
-msgstr ""
+msgstr "此欄位應該只包含以 <,> 或 <;> 分隔的通訊埠(0 - 65535)"
 
 msgid "This field should only contain strings separated by <,> or <;>"
-msgstr ""
+msgstr "此欄位應該只包含以 <,> 或 <;> 分隔的字串"
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "此功能只有當硬碟提供支援才有效。"
