--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.25) stable; urgency=low
+
+  * Fix postfix issue.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 25 Jan 2016 14:01:23 +0100
+
 openmediavault (2.1.24) stable; urgency=low
 
   * Various improvements.
