--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (2.1.25) stable; urgency=low
 
   * Fix postfix issue.
+  * Display the S.M.A.R.T. health status of the monitored devices.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 25 Jan 2016 14:01:23 +0100
 
