--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,8 @@ openmediavault (3.0.7) stable; urgency=low
 
   * Mantis 0001443: Fix S.M.A.R.T. overall status issue.
   * Mantis 0001454: Add mac address to network widget.
+  * Mantis 0001456: Send email notification on first login when using an
+    unknown browser.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 27 Jan 2016 01:17:43 +0100
 
@@ -58,6 +60,9 @@ openmediavault (2.1.26) stable; urgency=low
 
   * Various improvements.
   * Mantis 0001443: Fix S.M.A.R.T. overall status issue.
+  * Mantis 0001453: Notifications send to wrong email-adress.
+  * Mantis 0001456: Send email notification on first login when using an
+    unknown browser.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 27 Jan 2016 01:15:58 +0100
 
