--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-25 22:46+0100\n"
-"PO-Revision-Date: 2016-01-25 21:47+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-01-26 08:47+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -459,7 +459,7 @@ msgid "Azerbaijan"
 msgstr "Azerbaijan"
 
 msgid "Bad"
-msgstr ""
+msgstr "Male"
 
 msgid "Bahamas"
 msgstr "Bahamas"
@@ -1425,7 +1425,7 @@ msgid "Gibraltar"
 msgstr "Gibilterra"
 
 msgid "Good"
-msgstr ""
+msgstr "Buono"
 
 msgid "Greece"
 msgstr "Grecia"
@@ -3009,7 +3009,7 @@ msgstr "Imposta come sola scrittura"
 msgid ""
 "Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
 "errors and changes of S.M.A.R.T. attributes."
-msgstr ""
+msgstr "Imposta l'intervallo tra i check del disco a N secondi, loggando gli errori e i cambiamenti degli attributi S.M.A.R.T."
 
 msgid "Settings"
 msgstr "Impostazioni"
@@ -3810,7 +3810,7 @@ msgid "United States Minor Outlying Islands"
 msgstr "Isole Minori Esterne degli Stati Uniti"
 
 msgid "Unknown"
-msgstr ""
+msgstr "Sconosciuto"
 
 msgid "Unknown log file type (id=%s)"
 msgstr "File di log di tipo sconosciuto (id=%s)"
