--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-25 22:46+0100\n"
-"PO-Revision-Date: 2016-01-25 21:47+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-01-26 02:22+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -454,7 +454,7 @@ msgid "Azerbaijan"
 msgstr "アゼルバイジャン"
 
 msgid "Bad"
-msgstr ""
+msgstr "悪い"
 
 msgid "Bahamas"
 msgstr "な浜"
@@ -1420,7 +1420,7 @@ msgid "Gibraltar"
 msgstr "ジブラルタル"
 
 msgid "Good"
-msgstr ""
+msgstr "良い"
 
 msgid "Greece"
 msgstr "ギリシャ"
@@ -3805,7 +3805,7 @@ msgid "United States Minor Outlying Islands"
 msgstr "合衆国領有小離島"
 
 msgid "Unknown"
-msgstr ""
+msgstr "不明"
 
 msgid "Unknown log file type (id=%s)"
 msgstr "未知のログファイルタイプ (id=%s)"
