--- a/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-25 22:46+0100\n"
-"PO-Revision-Date: 2016-01-25 21:47+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-01-28 21:06+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/votdev/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -454,7 +454,7 @@ msgid "Azerbaijan"
 msgstr "Azerbaycan"
 
 msgid "Bad"
-msgstr ""
+msgstr "Kötü"
 
 msgid "Bahamas"
 msgstr "Bahamalar"
@@ -1420,7 +1420,7 @@ msgid "Gibraltar"
 msgstr "Cebelitarık"
 
 msgid "Good"
-msgstr ""
+msgstr "İyi"
 
 msgid "Greece"
 msgstr "Yunanistan"
@@ -3805,7 +3805,7 @@ msgid "United States Minor Outlying Islands"
 msgstr "ABD Küçük Dış Adaları"
 
 msgid "Unknown"
-msgstr ""
+msgstr "Bilinmiyor"
 
 msgid "Unknown log file type (id=%s)"
 msgstr "Bilinmeyen kayıt dosyası tipi (id=%s)"
