--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-25 22:46+0100\n"
-"PO-Revision-Date: 2016-01-25 21:47+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-01-29 06:34+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -455,7 +455,7 @@ msgid "Azerbaijan"
 msgstr "阿塞拜疆"
 
 msgid "Bad"
-msgstr ""
+msgstr "坏"
 
 msgid "Bahamas"
 msgstr "巴哈马"
@@ -1421,7 +1421,7 @@ msgid "Gibraltar"
 msgstr "直布罗陀"
 
 msgid "Good"
-msgstr ""
+msgstr "好"
 
 msgid "Greece"
 msgstr "希腊"
@@ -3806,7 +3806,7 @@ msgid "United States Minor Outlying Islands"
 msgstr "美国本土外小岛屿"
 
 msgid "Unknown"
-msgstr ""
+msgstr "未知"
 
 msgid "Unknown log file type (id=%s)"
 msgstr "未知日志文件类型 (id=%s)"
