--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-25 22:46+0100\n"
-"PO-Revision-Date: 2016-01-25 21:47+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-01-27 04:59+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -455,7 +455,7 @@ msgid "Azerbaijan"
 msgstr "阿塞拜疆"
 
 msgid "Bad"
-msgstr ""
+msgstr "損壞"
 
 msgid "Bahamas"
 msgstr "巴哈馬"
@@ -1421,7 +1421,7 @@ msgid "Gibraltar"
 msgstr "直布羅陀"
 
 msgid "Good"
-msgstr ""
+msgstr "良好"
 
 msgid "Greece"
 msgstr "希臘"
@@ -3806,7 +3806,7 @@ msgid "United States Minor Outlying Islands"
 msgstr "美國本土外小島嶼"
 
 msgid "Unknown"
-msgstr ""
+msgstr "未知"
 
 msgid "Unknown log file type (id=%s)"
 msgstr "未知的日誌檔案類型(id=%s)"
