* Various improvements * Use sort(xxx, SORT_NATURAL) instead of natsort(xxx) because this function does not modify the array keys. * Mantis 0001458: Failed to scan for new devices. * Update locales

--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-25 22:46+0100\n"
-"PO-Revision-Date: 2016-01-25 21:48+0000\n"
+"PO-Revision-Date: 2016-02-10 18:32+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/votdev/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -228,7 +228,7 @@ msgid "Add group"
 msgstr "Gruppe hinzufügen"
 
 msgid "Add hot spares / recover RAID device"
-msgstr "Hot-Spare hinzufügen"
+msgstr "Hot-Spare hinzufügen / RAID wiederherstellen"
 
 msgid "Add module"
 msgstr "Modul hinzufügen"
