--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,11 @@
+openmediavault (3.0.8) stable; urgency=low
+
+  * Update locales.
+  * Various improvements.
+  * Mantis 0001458: Failed to scan for new devices.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 10 Feb 2016 19:25:07 +0100
+
 openmediavault (3.0.7) stable; urgency=low
 
   * Update locales.
@@ -57,6 +65,20 @@ openmediavault (3.0) stable; urgency=low
   * Adapt package to Debian 8 (Jessie).
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 Nov 2015 15:53:40 +0100
+
+openmediavault (2.1.28) stable; urgency=low
+
+  * Various improvements.
+  * Mantis 0001458: Failed to scan for new devices.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 10 Feb 2016 19:10:00 +0100
+
+openmediavault (2.1.27) stable; urgency=low
+
+  * Mantis 0001456: Send email notification on first login when using an
+    unknown browser.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 08 Feb 2016 22:40:36 +0100
 
 openmediavault (2.1.26) stable; urgency=low
 
