* Various improvements * Use sort(xxx, SORT_NATURAL) instead of natsort(xxx) because this function does not modify the array keys. * Mantis 0001458: Failed to scan for new devices. * Update locales

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (2.1.28) stable; urgency=low
+
+  * Various improvements.
+  * Mantis 0001458: Failed to scan for new devices.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 10 Feb 2016 19:10:00 +0100
+
 openmediavault (2.1.27) stable; urgency=low
 
   * Mantis 0001456: Send email notification on first login when using an
