--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.9) stable; urgency=low
+
+  * Mantis 0001442: Add APT terminal output and history logs to log viewer.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 12 Feb 2016 15:32:52 +0100
+
 openmediavault (3.0.8) stable; urgency=low
 
   * Update locales.
