--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.9) stable; urgency=low
 
+  * Update locales.
   * Mantis 0001294: Add the ability to execute a rsync job via SSH and
     authenticate via public key.
   * Mantis 0001442: Add APT terminal output and history logs to log viewer.
