--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,8 @@ openmediavault (3.0.9) stable; urgency=low
   * Mantis 0001294: Add the ability to execute a rsync job via SSH and
     authenticate via public key.
   * Mantis 0001442: Add APT terminal output and history logs to log viewer.
+  * Mantis 0001459: Allow formatting single HDD with the BTRFS filesystem.
+  * Mantsi 0001462: Hide private SSH/SSL key in the WebGUI.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 12 Feb 2016 15:32:52 +0100
 
