--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.10) stable; urgency=low
+
+  * Fix bug in the package postinst script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 13 Feb 2016 19:15:26 +0100
+
 openmediavault (3.0.9) stable; urgency=low
 
   * Update locales.
