--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,7 +1,8 @@
 openmediavault (3.0.10) stable; urgency=low
 
   * Fix bug in the package postinst script.
-  * Fix issue that concerns the plugin add/remove procedure.
+  * Improve openmediavault-engined systemd unit file to fix an issue that
+    concerns the plugin add/remove procedure. Thanks to subzero79.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 13 Feb 2016 19:15:26 +0100
 
